# spanlib

./: .gitignore  .travis.yml  ChangeLog  INSTALL  MANIFEST.in  Makefile.am  README  README.rst  SpanLib.e3p  SpanLib.e3t  SpanLib.e4p  SpanLib.e4q  SpanLib.e4s  SpanLib.e4t  acinclude.m4  autogen.sh  configure.in  requirements.txt  setup.cfg  setup.cfg.example  setup.py
admin/m4/: ac_sr_blas.m4  ac_sr_docbook.m4  ac_sr_f2py.m4  ac_sr_footer.m4  ac_sr_fortran.m4  ac_sr_netcdf.m4  ac_sr_pyfort.m4  ac_sr_spanlib_doc.m4  ac_sr_spanlib_example.m4  ac_sr_spanlib_footer.m4  ac_sr_spanlib_fortran.m4  ac_sr_spanlib_python.m4  ac_sr_utils.m4  ax_check_docbook.m4  ax_with_python.m4
data/doc/html/: doc_ref.html  index.html
data/doc/xml/: spanlib.xml  spanlib.xsl
doc/: Makefile.am  common.xsl  doc_bib.html  doc_f90.html  doc_f90_exa.html  doc_f90_sub.html  doc_ins.html  doc_ins_dow.html  doc_ins_ins.html  doc_lin.html  doc_pyt.html  doc_pyt_exa.html  doc_pyt_sub.html  fortran_bottom.html  fortran_main.html  index.html  index.html-toc.html  makefile  spanlib.css  spanlib.html  spanlib.xml  spanlib.xsl  spanlib_pdf.xsl  spanlib_single.xsl  src.xsl  src_f90_ex1.html  src_f90_ex1.xml  src_f90_ex2.html  src_f90_ex2.xml  src_f90_ex3.html  src_f90_ex3.xml  src_f90_exa.html  src_f90_exa.xml  src_f90_lib.html  src_f90_lib.xml  src_pyt_ex1.html  src_pyt_ex1.xml  src_pyt_ex2.html  src_pyt_ex2.xml  src_pyt_exa.html  (+4 more)
doc/html/: Makefile.am  doc_biblio.html  doc_examples.html  doc_f90subs.html  doc_ref.html  f90_example.html  f90_library.html  index.html  spanlib.css
doc/source/: conf.py  features.txt  fortran.api.rst  fortran.rst  index.rst  installation.rst  lib.python.analyzer.rst  lib.python.data.rst  lib.python.dual.rst  lib.python.filler.rst  lib.rst  presentation.fundamentals.rst  presentation.introduction.rst  python.api.rst  python.api.util.rst  python.examples.rst  python.rst  python.usage.rst  references.rst  user.rst
doc/xml/: spanlib.xml  spanlib.xsl
example/: Makefile.am  example.f90  example.py  example1.f90  example1.py  example2.f90  example2.py  example3.f90  python_mssa_mctest.py
lib/: __init__.py  spanlib_extra.py  spanlib_python.py
lib/spanlib/: Makefile.am  __init__.py  analyzer.py  data.py  dual.py  filler.py  spanlib.f90  util.py
scripts/: Makefile.am  check_fortran.py  gendoc.pl  genpyf.pl  strip_fcargs.py
src/: Makefile.am  anaxv.f90  makefile  setup.cfg.template  setup.py.template  spanlib.f90  spanlib.pfp  spanlib.pyf  spanlib_lapack95.F90  spanlib_precision.F90  spanlib_pywrap.f90  template.setup.cfg  template.setup.py  template.spanlib_lapack95.f90  template.spanlib_precision.f90
test/: out.nc  test_data.py  test_dataset.py  test_filler.py  test_mssa.py  test_nopca_nomssa_yesphases.py  test_optimec.py  test_pca.py  test_pca_base.py  test_python.py  test_spanlib.py  test_stack.py  util.py
