######################################################################
## SpanLib, Raynaud 2006
######################################################################

SUBDIRS = html

######################################################################
######################################################################

if HAS_DOC_SUPPORT
else
all-local:
endif

