######################################################################
## SpanLib, Raynaud 2006
######################################################################

docdir=$(datadir)/@PACKAGE@
dist_doc_DATA = index.html spanlib.css

######################################################################
######################################################################

